[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
regex = "1.7.0"

[[bin]]
name = "day01"
path = "src/day01/day01.rs"

[[bin]]
name = "day02"
path = "src/day02/day02.rs"

[[bin]]
name = "day03"
path = "src/day03/day03.rs"


[[bin]]
name = "day04"
path = "src/day04/day04.rs"

[[bin]]
name = "day05"
path = "src/day05/day05.rs"

[[bin]]
name = "day06"
path = "src/day06/day06.rs"

